<resources>
    <string name="app_name">MaReu</string>
    <string name="submit">Submit</string>
    <string name="date_of_meeting">Date of Meeting</string>
    <string name="start_meeting">Start meeting</string>
    <string name="stop_meeting">Stop Meeting</string>
    <string name="d_finissez_la_couleur_de_votre_r_union">Définissez la couleur de votre réunion :</string>
    <string name="couleur">Couleur</string>
    <string name="_01_01_2021">01/01/2021</string>
    <string name="mail">Mail</string>
    <string name="string_mail" />
    <string name="delete">delete</string>
...
