...
        android:layout_height="match_parent"
        app:layout_anchorGravity="center">

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMeeting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:tint="#FFFFFF"
        app:backgroundTint="#960800"
...
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/toolbarListMeeting"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listMeeting_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
